--- a/miniReact/3-class/index.html
+++ b/miniReact/3-class/index.html
@@ -12,7 +12,7 @@
     <script>
       class Hello {
         render() {
-          return React.createElement("div", null, `Hello World`);
+          return React.createElement("div", null, `Hello World 111`);
         }
       }
 
